k8s/worker/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: http
  namespace: dev
spec:
  rules:
  - host: k8s.demo.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          serviceName: k8s-demo-svc
          servicePort: api
